
2009-04-17  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.9.25

2009-02-06  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 1.9.24

2008-11-04  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for python 2.6

2008-06-25  Mateusz Herych <heniekk@gmail.com>

	* Updated for x86_64 - 1.9.22

2008-06-25  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated for i686 - 1.9.22

2008-06-02  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated for i686 - 1.9.21

2008-02-17  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated to newer version - 1.9.20

2007-12-19  Douglas Soares de Andrade  <dsa@aur.archlinux.org>

	* Updated to newer version - 1.9.19
