@@ -1,10 +1,11 @@
 # $Id$
+# Maintainer: Brad Fanella <bradfanella@archlinux.us>
 # Contributor: Douglas Soares de Andrade <dsa@aur.archlinux.org>
 # Contributor: William Rea <sillywilly@gmail.com>
 
 pkgname=kiwi
 pkgver=1.9.26
-pkgrel=1
+pkgrel=2
 pkgdesc="A set of classes and wrappers for PyGTK"
 arch=('i686' 'x86_64')
 url="http://www.async.com.br/projects/kiwi"
@@ -15,6 +16,16 @@ source=(http://download.gnome.org/sources/$pkgname/1.9/$pkgname-$pkgver.tar.bz2)
 md5sums=('43c2aab9acf8d95321ee1ccec2c5e4e4')
 
 build() {
-    cd $srcdir/$pkgname-$pkgver
-    python setup.py install --root=$pkgdir
+	cd $srcdir/$pkgname-$pkgver
+	
+	# python2 fix
+	for file in bin/{kiwi-i18n,kiwi-ui-test} setup.py; do
+      		echo "Applying python2 fix for ${file}"
+		sed -i 's_/usr/bin/env python_/usr/bin/env python2_' ${file}
+  	done
+
+}
+package() {
+	cd $srcdir/$pkgname-$pkgver
+        python setup.py install --root=$pkgdir
 }
