@@ -1,3 +1,6 @@
+2009-04-17  Brad Fanella  <bradfanella@archlinux.us>
+
+        * Updated for i686 and x86_64: Python fixes
 
 2009-04-17  Douglas Soares de Andrade  <douglas@archlinux.org>
 
